fixe camera schema and edit view
- fix missing schema for camera endpoint
- first view functional for GET request
